# order-wizard

./: .gitignore  CLAUDE.md  PRIVACY.md  README.md  biome.json  claude.md  docker-compose.yml  justfile  package.json  tsconfig.base.json  turbo.json
.claude/: settings.json
.claude/skills/: dev-workflow.md  release.md
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy-server.yml  release.yml
apps/extension/: .env.example  .gitignore  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wxt.config.ts
apps/extension/public/: manifest.json
apps/extension/scripts/: seed-orders.js
apps/extension/src/: App.tsx  OAuthContext.tsx  config.ts  constants.ts  index.css  main.tsx  oauth-discovery.ts  types.ts  utils.ts
apps/extension/src/__tests__/: constants.test.ts  fbTemplate.test.ts  orderExport.test.ts  orderFilters.test.ts  schemas.test.ts
apps/extension/src/background/: background.ts
apps/extension/src/components/: DeleteConfirmModal.tsx  ErrorBoundary.tsx  FBQueuePanel.tsx  OrderCard.tsx  OrderEmptyStates.tsx  OrderTable.tsx  OrderTableFilters.tsx  OrderTableToolbar.tsx  UserBar.tsx
apps/extension/src/components/ui/: badge.tsx  button.tsx  card.tsx
apps/extension/src/config/: auth.ts  env.ts  index.ts  oauth.ts  storage.ts
apps/extension/src/constants/: index.ts
apps/extension/src/content/: content.ts  injector.ts  orderProcessor.ts  scraper.ts  userResolver.ts
apps/extension/src/contexts/: AuthContext.tsx  SyncContext.tsx
apps/extension/src/entrypoints/: background.ts  content.ts  fb-form-filler.content.ts
apps/extension/src/hooks/: useAccessToken.ts  useCloudSync.ts  useOrderSync.ts  useOrders.ts  useSafeAuth.ts  useSyncQueueCount.ts
apps/extension/src/lib/: errors.ts  fbQueue.ts  fbTemplate.ts  index.ts  syncQueue.ts
apps/extension/src/options/: Options.tsx  main.tsx
apps/extension/src/repositories/: ApiRepository.ts  LocalStorageRepository.ts  index.ts
apps/extension/src/schemas/: fbListing.ts  index.ts  order.ts
apps/extension/src/store/: orderStore.ts
apps/extension/src/types/: Order.ts  OrderStatus.ts  User.ts  fbListing.ts  index.ts  messages.ts
apps/extension/src/utils/: errorHandler.ts  index.ts  orderExport.ts  orderFilters.ts  validation.ts
apps/server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml  fly.toml  openapi.json  openapi.yaml  package.json
apps/server/mongo-init/: 01-init.js
apps/server/src/: config.rs  db.rs  docs.rs  error.rs  errors.rs  main.rs  models.rs  oauth.rs  state.rs
apps/server/src/auth/: mod.rs
apps/server/src/routes/: auth.rs  mod.rs  orders.rs
docs/: store-listing.md
docs/plans/: 2026-01-24-fb-marketplace-implementation.md  2026-01-24-fb-marketplace-listing.md  2026-01-24-sync-redesign.md
scripts/: sync-versions.sh
(+16 files in other folders)
