[package]
name = "order-wizard-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
bson = { version = "2.8", features = ["chrono-0_4"] }
dotenvy = "0.15"
futures = "0.3"
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime"] }
openidconnect = { version = "3.4", default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64ct = "=1.7.1"
time = "0.3"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tower-http = { version = "0.5", features = ["cors"] }
tower = { version = "0.4", features = ["timeout"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "5.0", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
validator = { version = "0.18", features = ["derive"] }
