[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mongodb = "3"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
dotenvy = "0.15"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
tower_governor = "0.8"
